--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form class="" action="mailto:info@ucdupes.org" method="post" enctype="text/plain">
       <h1>UCD Webinar registeration form</h1>
       <fieldset>
-<legend><span class="section">1.</span>enter details to resgister</legend>
+<legend><span class="section">1.</span>enter details to register</legend>
 
       <label class="" for="name">name</label>
       <input type="text" name="name" value="">
